// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotAuthorized component should apply custom styles 1`] = `
<EmptyState
  className="ins-c-not-authorized something"
  variant="full"
>
  <EmptyStateHeader
    headingLevel="h5"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="You do not have access to Foo"
  />
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <EmptyStateFooter>
    <Button
      component="a"
      href="."
      variant="primary"
    >
      Go to landing page
    </Button>
  </EmptyStateFooter>
</EmptyState>
`;

exports[`NotAuthorized component should not show buttons 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateHeader
    headingLevel="h5"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="You do not have access to Foo"
  />
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <EmptyStateFooter />
</EmptyState>
`;

exports[`NotAuthorized component should render 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateHeader
    headingLevel="h5"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="You do not have access to Foo"
  />
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <EmptyStateFooter>
    <Button
      component="a"
      href="."
      variant="primary"
    >
      Go to landing page
    </Button>
  </EmptyStateFooter>
</EmptyState>
`;

exports[`NotAuthorized component should show custom actions 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateHeader
    headingLevel="h5"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="You do not have access to Foo"
  />
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <EmptyStateFooter>
    <button
      id="action-one"
      key="1"
    >
      1
    </button>
    <button
      id="action-one"
      key="2"
    >
      2
    </button>
    <Button
      component="a"
      href="."
      variant="primary"
    >
      Go to landing page
    </Button>
  </EmptyStateFooter>
</EmptyState>
`;

exports[`NotAuthorized component should show custom description 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateHeader
    headingLevel="h5"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="You do not have access to Foo"
  />
  <EmptyStateBody>
    Some text
  </EmptyStateBody>
  <EmptyStateFooter>
    <Button
      component="a"
      href="."
      variant="primary"
    >
      Go to landing page
    </Button>
  </EmptyStateFooter>
</EmptyState>
`;

exports[`NotAuthorized component should show custom title 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateHeader
    headingLevel="h5"
    icon={
      <EmptyStateIcon
        icon={[Function]}
      />
    }
    titleText="Custom title"
  />
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <EmptyStateFooter>
    <Button
      component="a"
      href="."
      variant="primary"
    >
      Go to landing page
    </Button>
  </EmptyStateFooter>
</EmptyState>
`;

exports[`NotAuthorized component should use custom icon 1`] = `
<div
  className="pf-v5-c-empty-state ins-c-not-authorized "
>
  <div
    className="pf-v5-c-empty-state__content"
  >
    <div
      className="pf-v5-c-empty-state__header"
    >
      <div
        className="pf-v5-c-empty-state__icon"
      >
        some Icon!
      </div>
      <div
        className="pf-v5-c-empty-state__title"
      >
        <h5
          className="pf-v5-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      className="pf-v5-c-empty-state__body"
    >
      [
        "Contact your organization administrator(s) for more information or visit ",
        <a
          href="./settings/my-user-access"
        >
          My User Access
        </a>,
        "  to learn more about your permissions.",
      ]
    </div>
    <div
      className="pf-v5-c-empty-state__footer"
    >
      <a
        aria-disabled={false}
        aria-label={null}
        className="pf-v5-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-1"
        data-ouia-component-type="PF5/Button"
        data-ouia-safe={true}
        disabled={null}
        href="."
        role={null}
        type={null}
      >
        Go to landing page
      </a>
    </div>
  </div>
</div>
`;
